script_files/tat_sys_test2
ã‚¹ã‚¯ãƒªãƒ—ãƒˆã¯ 2018å¹´01æœˆ10æ—¥ 13æ™‚59åˆ†32ç§’
 ã«é–‹å§‹ã—ã¾ã—ãŸ[1;32mpi@pi[00m:[1;34m~/robodex[00m[1;31m (try_tat_sys)[00m$ exitgit diff robo_human_data.pyll -tr[Kar[K sudo XAUTHORITY=~/.Xauthority AUDIODEV=hw:2,0 python3 main.py
Traceback (most recent call last):
  File "main.py", line 9, in <module>
    import decide_action_TATsys
  File "/home/pi/robodex/decide_action_TATsys.py", line 271
    elif(2 == okao_gen):#å¥³æ€§
    ^
IndentationError: expected an indented block
[1;32mpi@pi[00m:[1;34m~/robodex[00m[1;31m (try_tat_sys)[00m$ fg
bash: fg: ã‚«ãƒ¬ãƒ³ãƒˆ: ãã®ã‚ˆã†ãªã‚¸ãƒ§ãƒ–ã¯ã‚ã‚Šã¾ã›ã‚“
[1;32mpi@pi[00m:[1;34m~/robodex[00m[1;31m (try_tat_sys)[00m$ exit
exit

ã‚¹ã‚¯ãƒªãƒ—ãƒˆã¯ 2018å¹´01æœˆ10æ—¥ 13æ™‚59åˆ†55ç§’
 ã«çµ‚äº†ã—ã¾ã—ãŸ